update index.html and README

--- a/index.html
+++ b/index.html
@@ -56,14 +56,15 @@
       }
 
       .card-title {
-        margin-top: 30px;
+        font-size: 22.5px;
+        margin-top: 18px;
         font-weight: 700;
         color: var(--Dark-blue);
       }
 
       .card-paragraph {
-        margin-top: 18px;
-        margin-bottom: 40px;
+        margin-top: 16px;
+        margin-bottom: 24px;
         font-weight: 400;
         color: var(--Grayish-blue);
       }
@@ -72,12 +73,16 @@
 
   <body>
 
-    <div class="card">
-      <img src="./images/image-qr-code.png" alt="">
-      <h2 class="card-title">Improve your front-end <br> skills by building projects</h2>
-      <p class="card-paragraph">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level
+    <main class="card" role="main">
+      <img src="./images/image-qr-code.png" alt="this is a qr code">
+      <h1 class="card-title">Improve your front-end <br> skills by building projects</h1>
+      <p class="card-paragraph">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next
+        level
       </p>
-    </div>
+    </main>
+
+
+
 
 
   </body>
