--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <body>
 
-    <main class="card" role="main">
+    <main class="card">
       <img src="./images/image-qr-code.png" alt="this is a qr code">
       <h1 class="card-title">Improve your front-end <br> skills by building projects</h1>
       <p class="card-paragraph">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next
